Añadir funcionalidades de autenticación y gestión de errores.

--- a/src/main/resources/mensajes_en.properties
+++ b/src/main/resources/mensajes_en.properties
@@ -1,9 +1,18 @@
 alumnos.search=Search
+auth.email=Email
+auth.forgot.password=Forgot your password?
+auth.login=Login
+auth.logout=Logout
+auth.password=Password
+auth.register=Register
+auth.remember=Remember me
+error.404=Resource not found
 label.alumno.apellido=Last name
 label.alumno.asignatura=Subject
 label.alumno.empty=No students were founds
 label.alumno.grado=Grade
 label.alumno.nombre=Name
+
 
 # Navigation bar
 nav.home=Home
