Añadir vistas de perfil(editar,etc.), y cambios generales.

--- a/src/main/resources/mensajes_en.properties
+++ b/src/main/resources/mensajes_en.properties
@@ -6,6 +6,7 @@ auth.logout=Logout
 auth.password=Password
 auth.register=Register
 auth.remember=Remember me
+auth.username=Username
 error.404=Resource not found
 label.alumno.apellido=Last name
 label.alumno.asignatura=Subject
