Añadir confirmación para el borrado de alumnos y mensajes de error en inglés y español.

--- a/src/main/resources/mensajes_en.properties
+++ b/src/main/resources/mensajes_en.properties
@@ -1,3 +1,5 @@
+alumnos.borrar.mensaje=Please, confirm the student \\"{0}\\" removal
+alumnos.borrar.titulo=Delete student
 alumnos.search=Search
 auth.email=Email
 auth.forgot.password=Forgot your password?
@@ -7,7 +9,10 @@ auth.password=Password
 auth.register=Register
 auth.remember=Remember me
 auth.username=Username
-error.404=Resource not found
+error.403=Access denied
+error.404=Page not found
+error.500=Internal server error
+error.general=An error has occurred
 label.alumno.apellido=Last name
 label.alumno.asignatura=Subject
 label.alumno.empty=No students were founds
